# routes/api.php
@@ -21,5 +21,6 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 Route::get("/category", [CategoryController::class, "index"]);
 Route::post("/category", [CategoryController::class, "store"]);
 Route::post("/category/edit/{id}", [CategoryController::class, "update"]);
-Route::delete("/category/delete/{id}", [CategoryController::class, "delete"]);
+Route::delete("/category/{id}", [CategoryController::class, "delete"]);
 Route::get('/category/{id}', [CategoryController::class, "getById"]);
+Route::get('/getImage/{image}', [\App\Http\Controllers\ImageController::class, "getImage"]);
